--- a/ejercicio01.htm
+++ b/ejercicio01.htm
@@ -10,7 +10,6 @@
         overflow: hidden;
     } </style> </head>
     <body>
-
 <!--- https://ajax.googleapis.com/ajax/libs/threejs/r76/three.min.js -->
 <script src = "https://cdnjs.cloudflare.com/ajax/libs/three.js/95/three.min.js"> </script>
 <script>
@@ -50,50 +49,32 @@ function init()
 	//Paso 2: Arreglo de cubos y la cantidad de cubos a crear
     var arrCube = [];
 	var numCubos= 3;
-	//Variable t para el tamaño de los cubos
-    var t = 1;
-	//Paso 3: For para la creacion de cubos
-    for (var i = 0; i < numCubos; i++) 
-	{
-		//Paso 4: Creacion del cubo base, como es el primero no se aplica ni escala ni rotacion
-		if (i==0)
-		{
-			//Añade los cubos al arreglo, dejandolo en el origen
-			arrCube.push(cubo(t, t, t, 0, 0, 0, 'Phong', (i==0 ? 'red': i==1 ? 'green' : 'blue'), false));
-		}else
-		{	//paso 5 creacion de los otros cubos.	
-			//Añade los otros dos cubos al arreglo, dejandolo en el origen
-			arrCube.push(cubo(t, t, t, 0, 0, 0, 'Lambert', (i==0 ? 'red': i==1 ? 'green' : 'blue'), false));
-			//Rotacion de los cubo sobre el eje, uso de un vector
-			if (i % 2==0) //Si el contador es par (0,2) entonces el cubo se rota Pi/2
-			{
-				var eje  = new THREE.Vector3 (0,1,0); // Eje vectorial
-				arrCube[i].rotateOnAxis(eje, Math.PI / 2); // gire π / 2 alrededor del eje
-			}else //Si el contador es impar (1) el cubo se rota pi/4
-			{
-				var eje  = new THREE.Vector3 (0,1,0); // Eje vectorial
-				arrCube[i].rotateOnAxis(eje, Math.PI / 4); // gire π / 4 alrededor del eje
-			}		
-			//Escalado de los cubos a la mitad
-			arrCube[i].scale.set(0.5,0.5,0.5);
-			t=t/2 //Divide t a la mitad para la creación del siguiente cubo
-	        //Traslacion del cubo  en el eje y, para ponerlos uno encima de otro 
-			d = i + ((i)/(2*i))	
-			arrCube[i].geometry.translate(0,d,0);
+
+    var t = 2;   // Valor de lado del cubo mayor
+    var angulo = Math.PI/4;
+
+    for (var i = 0; i < numCubos; i++) {
+		arrCube.push(cubo(t, t, t, 0, 0, 0, 'Phong', (i==0 ? 'red': i==1 ? 'green' : 'yellow'), false))
+		arrCube[0].position.set(t/2, t/2, t/2)
+		if (i == 1) {
+			arrCube[i].position.set(t/2, t + t/4, t/2)
+			arrCube[i].rotateY(angulo);
+		    arrCube[i].scale.set(0.5, 0.5, 0.5);
+		}
+		if (i == 2) {
+			arrCube[i].position.set(t/2, t + t/2 + t/8, t/2)
+		    arrCube[i].scale.set(0.25, 0.25, 0.25);
 		}
     }
 
-	//Ejes coordenados
     const axesHelper = new THREE.AxesHelper(10);
     scene.add(axesHelper);
 
-	//Creacion de la camara para visualizar la escena
     camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 100);
-    camera.position.set(3, 3, 3);
+    camera.position.set(t/2, 6*t, t/2);
     camera.lookAt(scene.position);
 
 	var light = new THREE.PointLight(0xFFFFFF);
-	//light.position.set(-10, 15, 50);
 	light.position.set(-5, 7, 20);
 	scene.add(light);
 
